gem in controller in model in migrate in view in

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,8 +15,16 @@
 						</h5>
 					</div>
 					<div class="card-footer"></div>
+
+					<% if post.images.attached? %>
+					  <% post.images.each do |image| %>
+					    <%= image_tag image %> <br>
+					  <% end %>
+					<% end %>
 				</div>
 			</div>
 		<% end %>
 	</div>
 </div>
+
+
