gem refile-mini_magick tuika

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -25,7 +25,7 @@ background-image: url(image5.jpg);
 background-size: cover;
 }
 
-.container {
+.sinkitouroku {
 	min-height: calc(100vh - 70px);
 	position: absolute;
 	top: 260px;
