--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
     <div class="image5"></div>
   </div>
 </div>
-<div class="container">
+<div class="container sinkitouroku">
   <div class="row">
     <div class="col-md-5 touroku">
     <p class="signup_title"> 新規登録 </p>
