--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,80 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+
+.post-new-title{
+	text-align: center;
+	letter-spacing: 0.3em;
+	margin-top: 40px;
+}
+.post-new-userimage {
+	text-align: center;
+	margin-top: 80px;
+	margin-bottom: 10px;
+}
+.post-new-username {
+	text-align: center;
+	font-size: 20px;
+	overflow: auto;
+}
+.post-new-email {
+	text-align: center;
+	font-size: 15px;
+	overflow: auto;
+}
+.post-new-table-main {
+	margin-left: 30px;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	padding:10px;
+	width: 600px;
+	height: 400px;
+	border-top-right-radius: 18px;
+	border-top-left-radius: 18px;
+	border-bottom-right-radius: 18px;
+	border-bottom-left-radius: 18px;
+	box-shadow: rgba(0,0,0,0.7) 3px 3px 10px;
+}
+
+
+.post-new-table-head-title-th {
+	text-align: center;
+	padding-bottom: 20px;
+	letter-spacing: 0.5em;
+}
+.post-new-table-head-title-h4 {
+	width: 130px;
+	text-align: center;
+}
+.post-new-up {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	text-align: right;
+	padding-right: 45px;
+}
+
+
+#post_location[type="text"] {
+        width: 200px;
+        height: 40px;
+    }
+#post_title[type="text"] {
+		width: 250px;
+        height: 40px;
+        margin-bottom: 5px;
+}
+
+#post_posted_details{
+		width: 600px;
+		height: 200px;
+		margin-right: 15px;
+}
+
+
+
+
+
+
