--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,3 +3,108 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+#mypage-profile-image {
+  font-size: 15px;
+  margin-top: 10px;
+  padding: 5px 8px;
+  border: solid 1px #EDBC6C;
+  color: #666;
+  position: relative;
+  padding: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 400px;
+  height: 250px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: #fff;
+  overflow: hidden;
+  box-sizing: border-box;
+  transition: 0.3s ease-out;
+}
+
+#mypage-profile-image i {
+  font-size: 100px;
+  color: #aaa;
+  line-height: 250px;
+  transition: 0.3s ease-out;
+}
+
+#mypage-profile-image i.add {
+  display: none;
+  font-size: 50px;
+  position: absolute;
+  top: -90px;
+  right: 15px;
+}
+
+#mypage-profile-image:hover {
+  background-color: #EDBC6C;
+  transition: 0.3s ease-out;
+  opacity: 0.9;
+}
+
+#mypage-profile-image:hover i {
+  transition: 0.3s ease-out;
+  display: block;
+  color: #fff;
+}
+
+.usershow-option-table{
+  width: 1100px;
+  height: 300px;
+}
+
+.usershow-option-caption {
+  text-align: center;
+}
+.usershow-option-tbody-td1{
+  text-align: center;
+  font-size: 25px;
+}
+.usershow-option-tbody-td2{
+  text-align: center;
+}
+.usershow-option-tbody-td3{
+  border-top-right-radius: 18px;
+  border-top-left-radius: 18px;
+  border-bottom-right-radius: 18px;
+  border-bottom-left-radius: 18px;
+  box-shadow: rgba(0,0,0,0.8) 3px 3px 10px;
+  padding: 10px;
+  font-size: 15px;
+  width: 700px;
+}
+.mypage-introduction{
+  position: relative;
+  top: -90px;
+  overflow: auto;
+
+}
+
+.usershow-option-tbody-td4{
+  text-align: center;
+}
+.pozition{
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: right;
+  padding-right: 45px;
+}
+.mypage-edit{
+  margin-right: 5px;
+}
+
+.mypage-hr {
+  box-shadow: rgba(0,0,0,0.5) 3px 3px 10px;
+}
+
+
+
+
+
+
+
+
+
