--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+/*///  user-show   ///*/
+
 #mypage-profile-image {
   font-size: 15px;
   margin-top: 10px;
@@ -62,6 +64,7 @@
 .usershow-option-tbody-td1{
   text-align: center;
   font-size: 25px;
+  padding-bottom: 15px;
 }
 .usershow-option-tbody-td2{
   text-align: center;
@@ -85,6 +88,8 @@
 
 .usershow-option-tbody-td4{
   text-align: center;
+  font-size: 16px;
+  padding-top: 5px;
 }
 .pozition{
   padding-top: 15px;
@@ -99,6 +104,53 @@
 .mypage-hr {
   box-shadow: rgba(0,0,0,0.5) 3px 3px 10px;
 }
+
+.mypage-index-main-caption{
+  text-align: center;
+}
+
+.mypage-index-main-tbody-td{
+  width: 750px;
+  height: 100%;
+}
+
+.mypage-index-main{
+  margin-bottom: 40px;
+}
+
+
+    /*////   user-edit   ////*/
+
+.mypage-edit-midasi{
+  text-align: center;
+  letter-spacing: 0.1em;
+}
+.mypage-edit-name-title{
+  letter-spacing: 0.1em;
+}
+
+#user_username[type="text"] {
+    width: 200px;
+    height: 40px;
+    margin-bottom: 5px;
+}
+
+#user_introduction{
+    width: 600px;
+    height: 200px;
+    margin-right: 15px;
+}
+
+.mypage-edit-up{
+  text-align: right;
+  margin-right: 150px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+
+
+
 
 
 
