--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,67 @@
-<div class="container">
-	<h2>最近の出来事</h2>
-	<div class="row">
-		<% @posts.each do |post| %>
-			<div class="col-md-4">
-				<div class="card">
-					<div class="card-header">
-						<%= attachment_image_tag post.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "20x20" %>
-						<%= post.created_at %>
-					</div>
-					
-					<div class="card-body">
-						<h5 class="card-title">
-							<%= post.title %>
-						</h5>
-					</div>
-					<div class="card-footer"></div>
 
-					<% if post.images.attached? %>
-					    <%= image_tag post.images.first %> <br>
-					<% end %>
-				</div>
-			</div>
-		<% end %>
-	</div>
+<p class="post-index-p2">---Recently Active---</p>
+	<div class="enko-image1">
+<div class="posts-index-main-container">
+
+		<table class="posts-index-table-1">
+			<tbody class="posts-index-tbody-1">
+				<tr class="posts-index-tbody-1-tr">
+					<td class="posts-index-tbody-1-td">
+						<% @posts.each_with_index do |post| %>
+						<table class="posts-index-table-2 ">
+							<thead class="posts-index-thead">
+								<tr class="posts-index-thead-tr">
+									<th class="posts-index-thead-th-1">
+										<div class="card-header-top-image">
+											<rt>
+												<%= attachment_image_tag post.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+											</rt>
+										</div>
+
+									</th>
+									<th class="posts-index-thead-th-2">
+										<div class="card-header-top-image-username">
+											<%= post.user.username %>
+										</div>
+									</th>
+								</tr>
+							</thead>
+							<tbody class="posts-index-tbody-2">
+								<tr class="posts-index-tbody-2-tr">
+									<td class="posts-index-tbody-2-td" colspan="2">
+										<div class="post-card-body-image">
+											<% if post.images.attached? %>
+										    	<%= image_tag post.images.first, size: "260x260"  %> <br>
+											<% end %>
+										</div>
+									</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td class="posts-index-tbody-2-td2" colspan="2">
+										<p class="posts-title-title">Title</p>
+										<h4 class="posts-index-tbody-2-td2-h4"><%= post.title %></h4>
+									</td>
+									<td></td>
+								</tr>
+							</tbody>
+							<tfoot class="posts-index-tfoot">
+								<tr class="posts-index-tfoot-tr">
+									<td class="posts-index-tfoot-td" colspan="2">
+										<div class="post-card-footer-text">
+											<small><%= post.created_at %></small>
+										</div>
+									</td>
+									<td></td>
+								</tr>
+							</tfoot>
+						</table>
+						<% end %>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+</div>
 </div>
 
 
