--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,54 +8,56 @@
 				<tr class="posts-index-tbody-1-tr">
 					<td class="posts-index-tbody-1-td">
 						<% @posts.each_with_index do |post| %>
-						<table class="posts-index-table-2 ">
-							<thead class="posts-index-thead">
-								<tr class="posts-index-thead-tr">
-									<th class="posts-index-thead-th-1">
-										<div class="card-header-top-image">
-											<rt>
-												<%= attachment_image_tag post.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
-											</rt>
-										</div>
+							<%= link_to post_path(post.id) do %>
+							<table class="posts-index-table-2 ">
+								<thead class="posts-index-thead">
+									<tr class="posts-index-thead-tr">
+										<th class="posts-index-thead-th-1">
+											<div class="card-header-top-image">
+												<rt>
+													<%= attachment_image_tag post.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+												</rt>
+											</div>
 
-									</th>
-									<th class="posts-index-thead-th-2">
-										<div class="card-header-top-image-username">
-											<%= post.user.username %>
-										</div>
-									</th>
-								</tr>
-							</thead>
-							<tbody class="posts-index-tbody-2">
-								<tr class="posts-index-tbody-2-tr">
-									<td class="posts-index-tbody-2-td" colspan="2">
-										<div class="post-card-body-image">
-											<% if post.images.attached? %>
-										    	<%= image_tag post.images.first, size: "260x260"  %> <br>
-											<% end %>
-										</div>
-									</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td class="posts-index-tbody-2-td2" colspan="2">
-										<p class="posts-title-title">Title</p>
-										<h4 class="posts-index-tbody-2-td2-h4"><%= post.title %></h4>
-									</td>
-									<td></td>
-								</tr>
-							</tbody>
-							<tfoot class="posts-index-tfoot">
-								<tr class="posts-index-tfoot-tr">
-									<td class="posts-index-tfoot-td" colspan="2">
-										<div class="post-card-footer-text">
-											<small><%= post.created_at %></small>
-										</div>
-									</td>
-									<td></td>
-								</tr>
-							</tfoot>
-						</table>
+										</th>
+										<th class="posts-index-thead-th-2">
+											<div class="card-header-top-image-username">
+												<%= post.user.username %>
+											</div>
+										</th>
+									</tr>
+								</thead>
+								<tbody class="posts-index-tbody-2">
+									<tr class="posts-index-tbody-2-tr">
+										<td class="posts-index-tbody-2-td" colspan="2">
+											<div class="post-card-body-image">
+												<% if post.images.attached? %>
+											    	<%= image_tag post.images.first, size: "250x250"  %> <br>
+												<% end %>
+											</div>
+										</td>
+										<td></td>
+									</tr>
+									<tr>
+										<td class="posts-index-tbody-2-td2" colspan="2">
+											<p class="posts-title-title">Title</p>
+											<h4 class="posts-index-tbody-2-td2-h4"><%= post.title %></h4>
+										</td>
+										<td></td>
+									</tr>
+								</tbody>
+								<tfoot class="posts-index-tfoot">
+									<tr class="posts-index-tfoot-tr">
+										<td class="posts-index-tfoot-td" colspan="2">
+											<div class="post-card-footer-text">
+												<small><%= post.created_at.strftime('%Y/%m/%d') %></small>
+											</div>
+										</td>
+										<td></td>
+									</tr>
+								</tfoot>
+							</table>
+							<% end %>
 						<% end %>
 					</td>
 				</tr>
@@ -63,5 +65,13 @@
 		</table>
 </div>
 </div>
+
+
+
+
+
+
+
+
 
 
