--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,65 +27,66 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-
 .clearfix::after {
   content: "";
   display: block;
   clear: both;
 }
-
-header {
-  background-image: url(image1.jpg);
-  background-position: top;
-  position: relative;
-  width: 100%;
-  height: 120px;
-  margin: 0 auto;
-  display: block;
-  border-top: 3px solid #000;
-  border-bottom: 3px solid #000;
-}
-
-
-.icon .material-icons {
-	font-size: 40px;
-}
-
-.icons1 {
-	display: block;
-	margin: 50px 0px 0px 55px;
-	float: left;
-}
-
-.icons2 {
-	display: block;
-	margin: 50px 0px 0px 55px;
-	float: left;
-}
-
-
 #container{
   height: 900px;
 }
+header{
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+  height: 120px;
+  padding-top: 10px;
+  background-image: url(image1.jpg);
+  background-size: cover;
+}
 
-.active {
+.icon1{
+  font-size: 35px;
+  margin-top: 55px;
+  margin-left: 60px;
+  float: left;
+}
+
+.icon2{
+  font-size: 35px;
+  margin-top: 55px;
+  margin-left: 50px;
+  float: left;
+}
+.icon3{
+  font-size: 35px;
+  margin-top: 55px;
+  margin-left: 70px;
+  float: left;
+}
+.header-title{
+  position: relative;
   font-style: oblique;
   font-family: serif;
   font-weight: bold;
   letter-spacing: 0.23em;
-	width: 60px;
-	height: 50px;
-	text-align: center;
   text-shadow: rgba(0,0,0,0.6) 2px 2px 4px;
-	font-size: 60px;
-	margin: 10px 0px 0px 390px;
-	float: left;
-
+  font-size: 60px;
+  left: 370px;
+  color: #000;
 }
-
-.active .active-rt {
-  font-size: 25px;
+.kensaku{
+  float: right;
+  margin-top: 60px;
+  margin-right: 90px;
+}
+#q_title_cont{
+  width: 200px;
+  height: 30px;
+}
+.search-btn{
+  width: 45px;
+  height: 30px;
+  font-size: 16px;
 }
 
 footer {
@@ -104,10 +105,6 @@ footer .end {
 .footer_title {
   color: #FFF;
 }
-
-
-
-
 
 
 
